# ai-gen-4

./: .replit  app.py  example_system_card.txt  http_proxies.txt  image-sorting.py  index.html  pyproject.toml  replit.nix  system_card.txt  test.py
static/: script.js  style.css
templates/: index.html  temp.html
