[tool.poetry]
name = "repl_nix_chatgptwebapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
python-dotenv = "^1.0.0"
scikit-image = "^0.21.0"
numpy = "^1.25.1"
ImageHash = "^4.3.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
